# etl-zipf-law-analysis

./: .env.example  .gitignore  LICENSE  README.md  gutenberg_ids.csv  llm_generation.py  main.py  pre_processing.py  pyproject.toml  requirements.txt
outputs/: zipf_results.csv
src/: __init__.py  config.py
src/analysis/: statistics.py  zipf.py
src/data/: loader.py  preprocessing.py
src/models/: groq_generator.py
src/pipelines/: pipeline.py
src/utils/: file_manager.py  helpers.py  logger.py
src/visualization/: plots.py
tests/: test_file_manager.py  test_preprocessing.py  test_statistics.py  test_zipf.py
